feat(users): - mongoose@5.2.5 (MongoDB 4) \\ добавил 2 новых апи: /api/users/:username/remove и /api/users/removeAll (везде необходим projectId и только для пользователя с ролью 'admin') \\ Для user добавил contextData - мапу где можно хранить доп инфу по пользователям в проекте \\ добавил createPermissionHandlers теперь в options для createRoute можно добавить проверку permissions и roles \\ PermissionError и ValidationError
